# speech-eureka

./: .gitignore  Makefile  README.md  pyproject.toml
.hydra/: config.yaml  hydra.yaml  overrides.yaml
src/speech_eureka/: app.py  evaluate.py  main.py  pipeline.py
src/speech_eureka/configs/: config.yaml  evaluate.yaml
src/speech_eureka/configs/diarization/: pyannote.yaml
src/speech_eureka/configs/pipeline/: default.yaml  transcribe_only.yaml
src/speech_eureka/configs/speaker_id/: ecapa.yaml
src/speech_eureka/configs/transcription/: whisper.yaml  whisper_small.yaml
src/speech_eureka/metrics/: __init__.py  _types.py  classroom.py  diarization.py  io.py  report.py  transcription.py
src/speech_eureka/models/: __init__.py  data.py
src/speech_eureka/modules/: base.py  diarization.py  speaker_id.py  transcription.py
src/speech_eureka/utils/: audio.py
